docs/errors/examples/manifest-version-mismatch/manifest-version-mismatch.expected.txt
error[E3201]: manifest version mismatch
  --> manifest-version-mismatch.grob:1:1
   |
 1 | import Grob.Http
   | ^^^^^^
   |
   = note: grob.json requires runtime >= 1.2.0
   = note: installed runtime is 1.0.0
   = help: update the runtime with: `winget upgrade Grob.Grob`
